--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <title>3-column preview card component</title>
 
 
 </head>
 
 <body>
 
-  <div class="card">
+  <div class="cards">
 
-    <div class="card__sedans">
+    <div class="card card__sedans">
       <img src="images/icon-sedans.svg" alt="">
       <h1>Sedans</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
@@ -26,7 +26,7 @@
       <button>Learn More</button>
     </div>
 
-    <div class="card__suvs">
+    <div class="card card__suvs">
       <img src="images/icon-suvs.svg" alt="">
       <h1>SUVs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next
@@ -35,7 +35,7 @@
       <button>Learn More</button>
     </div>
 
-    <div class="card__luxury">
+    <div class="card card__luxury">
       <img src="images/icon-luxury.svg" alt="">
       <h1>Luxury</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
